# TUYUL-FX-WOLF-15LAYER-SYSTEM

./: # Code Citations.md  ._api_live_err.txt  ._api_live_poll.py  ._api_probe.py  ._live_verdict_check.py  ._verify_live_endpoint.py  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  ARCHITECTURE-V2.html  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.ingestor  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_UPGRADE_SUMMARY.md  README.md  REASONING_ENGINE_INTEGRATION.md  RISK_MANAGEMENT_SUMMARY.md  WOLF_SOVEREIGN_PIPELINE_SUMMARY.md  _batch_result.txt  _check_endpoint.py  _check_quotes.py  _db_check.py  _find_untyped_dicts.py  _hb_fix_test.txt  _hb_fix_test2.txt  _next_fail_global.txt  _next_fail_out.txt  _pr004_collect.txt  _pr004_cors.txt  _pr004_cors2.txt  _pr004_existing.txt  _pr004_gov.txt  _pr004_gov2.txt  _pr004_gov3.txt  (+92 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  trufflehog-exclude.txt
accounts/: __init__.py  account_manager.py  account_model.py  account_repository.py  account_risk_engine.py  account_state_service.py  capital_deployment.py  exposure_control.py  phase_manager.py  prop_rule_engine.py  risk_calculator.py  risk_engine.py
agents/: __init__.py  exceptions.py  models.py  registry.json  repository.py  router_engine.py  sample_objective.json  service.py
alerts/: __init__.py  alert_formatter.py  alert_monitor.py  alert_rules.py  telegram_notifier.py
allocation/: __init__.py  allocation_audit.py  allocation_models.py  allocation_router.py  allocation_service.py  async_worker.py  job_contracts.py  signal_registry.py  signal_service.py
analysis/: # ❌ OLD PATTERN — run_in_executor + sync.py  STRATEGIC_BLUEPRINT_2026-04-22.md  __init__.py  candle_accumulator.py  candle_builder.py  candle_freshness.py  data_feed.py  data_quality_gate.py  exhaustion_dvg_fusion_engine.py  incremental_monte_carlo.py  l10_risk_geometry.py  l4_scoring.py  l4_session.py  l5_fundamental.py  l5_psychology.py  l6_risk.py  l8_tii.py  latency_tracker.py  macro_regime_engine.py  macro_volatility_engine.py  portfolio_monte_carlo.py  price_analysis.py  probability_cluster_fallback.py  redis_key_scanner.py  reflex_emc.py  reflex_gate.py  reflex_multitf.py  reflex_rqi.py  signal_conditioner.py  synthesis.py  synthesis_adapter.py  synthesis_contract.py  tick_filter.py  tick_pipeline.py  tick_stream.py  vix_analysis_engine.py  vix_proxy_estimator.py  volatility.py  volatility_regime_engine.py
api/: __init__.py  accounts_router.py  agent_ingest_router.py  agent_manager_router.py  allocation_router.py  app_factory.py  auth_router.py  calendar_router.py  calendar_routes.py  config_profile_router.py  constitutional_routes.py  dashboard_api.py  dashboard_router.py  dashboard_routes.py  ea_router.py  execution_router.py  governance_routes.py  heartbeat_routes.py  hybrid_candle_agg.py  instrument_routes.py  journal_routes.py  l12_routes.py  metrics_router.py  metrics_routes.py  orchestrator_routes.py  outbox_router.py  permissions.py  prop_router.py  redis_context_reader.py  redis_health_routes.py  risk_events_routes.py  risk_router.py  router_registry.py  settings_governance.py  settings_routes.py  signals_router.py  system_health_routes.py  take_signal_routes.py  trades_router.py  ws_router.py  (+1 more)
config/: __init__.py  constants.py  constitution.py  constitution.yaml  effective_constitution.py  env.py  finnhub.yaml  finnhub_premium.yaml  logging.py  logging_bootstrap.py  news.yaml  pair_spreads.py  pairs.yaml  pip_values.py  profile_engine.py  prop_firm.yaml  risk.yaml  settings.py  settings.yaml  telegram.yaml  thresholds.py  twelve_data.yaml  v11.yaml
constitution/: __init__.py  adaptive_threshold_governor.py  end_to_end_constitutional_wrapper_to_phase3.py  end_to_end_constitutional_wrapper_to_phase4.py  end_to_end_constitutional_wrapper_to_phase5.py  end_to_end_phase3_to_phase4_bridge_adapter.py  final_normalized_payload_exporter.py  foundation_scoring_constitutional_wrapper.py  foundation_scoring_enrichment_constitutional_wrapper.py  foundation_scoring_enrichment_to_phase3_bridge_adapter.py  gate_penalty_engine.py  gatekeeper.py  l10_router_evaluator.py  l11_router_evaluator.py  l12_router_evaluator.py  l1_router_evaluator.py  l2_router_evaluator.py  l3_router_evaluator.py  l4_router_evaluator.py  l5_router_evaluator.py  l6_router_evaluator.py  l7_router_evaluator.py  l8_router_evaluator.py  l9_router_evaluator.py  layer12_pipeline.py  phase1_chain_adapter.py  phase1_to_phase2_bridge_adapter.py  phase25_enrichment_wrapper.py  phase2_chain_adapter.py  phase3_chain_adapter.py  phase4_chain_adapter.py  phase5_constitutional_verdict_adapter.py  signal_dedup.py  signal_expiry.py  signal_id.py  signal_integrity.py  (+3 more)
tuyul-trading-swarm/: .dockerignore  .env.example  Dockerfile  README.md  api_server.py  docker-compose.yml  main.py  pyproject.toml
tuyul-trading-swarm/agents/: __init__.py  audit_governance.py  base_agent.py  journal_review.py  market_condition.py  market_scanner.py  memory_handoff.py  news_event_risk.py  orchestrator.py  psychology_discipline.py  risk_reward.py  smart_money.py  technical_structure.py  trade_execution.py
tuyul-trading-swarm/api/: __init__.py  app_factory.py
tuyul-trading-swarm/api/middleware/: auth.py
tuyul-trading-swarm/api/routes/: agent_routes.py  decision_routes.py  governance_routes.py  memory_routes.py
tuyul-trading-swarm/config/: agent-manifest.yaml  constitution.yaml
tuyul-trading-swarm/core/: __init__.py  decision_engine.py  event_bus.py  memory_fabric.py  shift_manager.py
tuyul-trading-swarm/dashboard/: index.html
tuyul-trading-swarm/dashboard/static/: app.js  style.css
tuyul-trading-swarm/infrastructure/: redis_client.py
tuyul-trading-swarm/pytest-cache-files-ecn3dae7/v/cache/: nodeids
tuyul-trading-swarm/schemas/: __init__.py  agent_report.py  decision_packet.py  trade_candidate.py
tuyul-trading-swarm/skills/coordination/: tuyul-swarm-v3.md
tuyul-trading-swarm/skills/core/: tuyul-orchestrator-v3.md
tuyul-trading-swarm/tests/: test_agents.py  test_decision_engine.py
(+2088 files in other folders)
