[project]
name = "tuyulfx-wolf"
version = "7.4.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]

# =============================================================
# Ruff Configuration — TUYUL KARTEL FX
# =============================================================
[tool.ruff]
target-version = "py311"
line-length = 100

# =============================================================
# Lint
# =============================================================
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (indentation, whitespace, dll.)
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (urutan import)
    "N",      # pep8-naming (PascalCase class, snake_case func)
    "UP",     # pyupgrade (upgrade syntax ke Python 3.11+)
    "B",      # flake8-bugbear (common bugs & design problems)
    "SIM",    # flake8-simplify (simplifikasi kode)
    "ANN",    # flake8-annotations (type hints enforcement)
    "ASYNC",  # flake8-async (async/await best practices)
    "S",      # flake8-bandit (security checks)
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "RET",    # flake8-return (return statement consistency)
    "PTH",    # flake8-use-pathlib (Path > os.path)
    "ERA",    # eradicate (commented-out code detection)
    "PL",     # pylint subset
    "RUF",    # ruff-specific rules
    "PERF",   # perflint (performance anti-patterns)
    "T20",    # flake8-print (no print() in production)
    "TCH",    # flake8-type-checking (optimize TYPE_CHECKING imports)
    "C4",     # flake8-comprehensions (list/dict comp best practices)
]
ignore = [
    "ANN401",  # allow `Any` hanya kalau memang perlu
    "E501",    # line length — kita pakai formatter untuk ini
    "PLR2004", # magic values — terlalu strict untuk trading system
    "ANN204",  # missing return type for __init__ — tidak perlu
    "ANN202",  # missing return type for private methods — tidak strict
    "ANN206",  # missing return type for classmethod — tidak strict
    "RUF012",  # mutable class default — akan di-handle by design
    "ANN201",  # missing return type for public function — akan di-fix gradual
    "ANN001",  # missing type annotation for arg — akan di-fix gradual
    "RET504",  # unnecessary assignment before return — improves readability
    "RUF002",  # ambiguous unicode char in docstring — intentional symbols
    "RUF003",  # ambiguous unicode char in comment — intentional symbols  
    "SIM103",  # return condition directly — reduces readability sometimes
    "PLR0915", # too many statements — complex functions are ok here
    "SIM105",  # contextlib.suppress — explicit try/except clearer
    "SIM108",  # ternary operator — multiline if/else is clearer
    "SIM102",  # single if instead of nested — affects readability
    "PLW0603", # global statement — used intentionally for singletons
    "PTH123",  # Path.open() vs open() — both work fine, style preference
    "S110",    # try-except-pass — sometimes intentional for optional features
    "S104",    # possible binding to all interfaces — intentional for servers
    "S311",    # pseudo-random — not used for crypto purposes
    "ERA001",  # commented-out code — sometimes needed for reference
    "N818",    # Exception name suffix — project convention
    "TC002",   # TYPE_CHECKING import — optimization, not critical
    "UP038",   # isinstance X | Y — compatibility preference
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "N806", "B007", "B017", "DTZ", "RET504", "UP038", "PERF102"]
"alembic/**/*.py" = ["ALL"]
"sandbox/**/*.py" = ["ALL"]  # experimental/development code
"scripts/**/*.py" = ["T201", "ANN", "S"]  # utility scripts may use print
"analysis/layers/L*.py" = ["N999", "S101"]  # L1-L11 naming convention is intentional; assert for type narrowing
"journal/**/*.py" = ["DTZ007"]  # datetime parsing then adds timezone

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "trading", "signals"]
force-single-line = false
lines-between-types = 1

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.field_validator"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 8
max-branches = 14

# =============================================================
# Formatter (pengganti Black)
# =============================================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
